[package]
name = "strings"
version = "0.1.5"
description = "Extract stack, static, decoded and tight strings from a given binary."
authors = ["Marirs <marirs@gmail.com>"]
keywords = ["strings", "static", "decoded", "stack", "tight"]
edition = "2021"

[dependencies]
vivutils = { git = "https://github.com/marirs/vivutils-rs", branch = "master" }
vivisect = "0.1.13"
log = "0.4.17"
simple_logger = "5.0.0"
thiserror = "1.0.37"
chrono = "0.4.23"
serde_json = "1"
serde = { version="1", features=["derive"] }
regex = "1"
lazy_static = "1"
capstone = "0.12.0"
goblin = "0.8"

[lib]
name = "strings"
path = "src/lib.rs"

[[example]]
name="strings_cli"
path= "examples/strings_cli.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
